--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -5,6 +5,11 @@ on:
     - cron: '0 * * * *'  # toutes les heures (UTC)
   workflow_dispatch:     # exécution manuelle possible
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
